added schedules which explore the whole visit space

--- a/report/lastpaper/main_manuscript.tex
+++ b/report/lastpaper/main_manuscript.tex
@@ -67,7 +67,7 @@
 %  the examples below in creating your author and affiliation information.
 %  Also consult a recent issue of the journal for examples of formatting.
 
-\title[Personalized Surveillance Schedules]{Personalized Schedules for Burdensome Surveillance Tests in Chronic Diseases}
+\title[Personalized Surveillance Schedules]{Personalized Schedules for Burdensome Surveillance Tests}
 
 %  Here are examples of different configurations of author/affiliation
 %  displays.  According to the Biometrics style, in some instances,
@@ -221,7 +221,7 @@ Chronic diseases; Invasive medical tests; Joint models; Personalized schedules; 
 \input{mainmatter/introduction}
 \input{mainmatter/jointmodel}
 \input{mainmatter/schedule}
-\input{mainmatter/results}
+\input{mainmatter/demo_results}
 \input{mainmatter/sim_study}
 \input{mainmatter/discussion}
 
